# MVP-projection

./: CMakeLists.txt  README.md  compile_run.sh  main.cpp  rasterizer.cpp
